# GammaRay

./: .gitignore  .gitmodules  BUILD_FIXES_SUMMARY.md  CI-SETUP-SUMMARY.md  CMAKE_WINDOWS_ONLY_FIXES.md  CMakeLists.txt  LIBSYSTEMD_BUILD_FIX.md  SOLUTION_SUMMARY.md  docker-compose.yml  env_settings.cmake  install.py  test_cmake_config.sh  test_cmake_syntax.sh
.github/workflows/: README.md  build-artifacts.yml  build-release.yml  build.yml  build1-release.yml  windows-build-simple.yml  windows-build.yml  windows-qemu-build.yml  windows-qemu-simple.yml
cmake/modules/FFTW3/: FFTW3Config.cmake
cmake/modules/cpr/: cprConfig.cmake
cmake/modules/unofficial-libvpx/: unofficial-libvpxConfig.cmake
docker/: vcpkg.Dockerfile
scripts/: local-qemu-build.sh  test-ci-config.sh
src/: linux_main.cpp
src/client/: CMakeLists.txt
src/client/plugin_interface/: CMakeLists.txt
src/render/: CMakeLists.txt
src/render/plugin_interface/: CMakeLists.txt
src/render/plugins/ffmpeg_encoder/: CMakeLists.txt
src/tests/: CMakeLists.txt
